<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/list_order_entry"
        android:title="@string/list_order_title"
        android:key="@string/list_key"
        android:summary="%s"
        android:defaultValue="@string/list_order_default"
        android:dialogTitle="@string/list_order_title"
        android:entryValues="@array/list_order_entry_values" />
    <ListPreference
        android:entries="@array/show_order_entry"
        android:title="@string/show_order_title"
        android:key="@string/show_key"
        android:summary="%s"
        android:defaultValue="@string/show_order_default"
        android:dialogTitle="@string/show_order_title"
        android:entryValues="@array/show_order_entry_values" />
</PreferenceScreen>