<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:inputType="textCapWords"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/add_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:ems="10"
            android:layout_below="@id/add_name"
            android:layout_alignParentLeft="true"
            android:inputType="textCapWords"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/add_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:ems="10"
            android:layout_below="@id/add_surname"
            android:layout_alignParentLeft="true"
            android:inputType="phone"
            android:layout_alignParentStart="true" />
        <TextView
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:id="@+id/add_mainpic_txt"
            android:paddingTop="10.0dip"
            android:paddingBottom="20.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_pic"
            android:layout_below="@id/add_phone"
            android:layout_centerHorizontal="true" />
        <RelativeLayout
            android:id="@+id/relativeImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_mainpic_txt">
            <ImageView
                android:id="@+id/add_mainpic"
                android:layout_width="175.0dip"
                android:layout_height="200.0dip"
                android:src="@mipmap/ic_action_person_light"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true" />
            <ProgressBar
                android:id="@+id/pBarAdd"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="100.0dip"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:id="@+id/add_otherpic_txt"
            android:paddingTop="20.0dip"
            android:paddingBottom="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_pic"
            android:layout_below="@id/relativeImage"
            android:layout_centerHorizontal="true" />
        <com.example.andrea.myapplication.other_class.ExpandableHeightGridView
            android:id="@+id/add_gridview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:layout_below="@id/add_otherpic_txt" />
    </RelativeLayout>
</ScrollView>